--- a/templates/login.html
+++ b/templates/login.html
@@ -12,13 +12,13 @@
   <body>
 
     <div class="container">
-      <form class="form-signin" action="index.html" method="post">
+      <form class="form-signin" action="{{ url_for('login') }}" method="POST">
             <h2 class="form-signin-heading">Please Log In</h2>
             <label for="username" class="sr-only">Username</label>
-            <input type="text" class="form-control" placeholder="username" required autofocus><br>
+            <input type="text" class="form-control" placeholder="username" name='username' required autofocus><br>
             <label for="password" class="sr-only">Password</label>
-            <input type="password" class="form-control" placeholder="password" required>
-            <button type="submit" class="btn btn-lg btn-primary btn-block" name="button">Log In</button>
+            <input type="password" class="form-control" placeholder="password" name='password' required>
+            <button type="submit" class="btn btn-lg btn-primary btn-block">Log In</button>
       </form>
     </div>
   <!-- Latest compiled and minified JavaScript  and jquery-->
