--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,11 @@
     <div class="container">
       <div class="starter">
           <h1>Welcome</h1>
+          
+          {% block content%}
           <p class="lead">Content</p>
+          {% endblock content %}
+
       </div>
     </div>
   <!-- Latest compiled and minified JavaScript  and jquery-->
