--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,13 @@
             <label for="password" class="sr-only">Password</label>
             <input type="password" class="form-control" placeholder="password" name='password' required>
             <button type="submit" class="btn btn-lg btn-primary btn-block">Log In</button>
+            {% if error%}
+              <div class="alert alert-danger" role='alert'>
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class='sr-only'>Error:</span>
+                {{ error }}
+              </div>
+            {% endif %}
       </form>
     </div>
   <!-- Latest compiled and minified JavaScript  and jquery-->
