--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
           <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">Modify</a></li>
-              <li><a href="#contact">Logout</a></li>
+              <li><a href="{{ url_for('logout') }}">Logout</a></li>
           </ul>
         </div>
       </div>
@@ -34,8 +34,7 @@
 
     <div class="container">
       <div class="starter">
-          <h1>Welcome</h1>
-          
+
           {% block content%}
           <p class="lead">Content</p>
           {% endblock content %}
