--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
             <input type="text" class="form-control" placeholder="username" name='username' required autofocus><br>
             <label for="password" class="sr-only">Password</label>
             <input type="password" class="form-control" placeholder="password" name='password' required>
-            <button type="submit" class="btn btn-lg btn-primary btn-block">Log In</button>
+            <button type="submit" class="btn btn-lg btn-primary btn-block">Log In</button><br>
             {% if error%}
               <div class="alert alert-danger" role='alert'>
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
