--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,7 @@
             <label for="password" class="sr-only">Password</label>
             <input type="password" class="form-control" placeholder="password" name='password' required>
             <button type="submit" class="btn btn-lg btn-primary btn-block">Log In</button><br>
+            <!-- Showing the error -->
             {% if error%}
               <div class="alert alert-danger" role='alert'>
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
