--- a/templates/login.html
+++ b/templates/login.html
@@ -11,14 +11,61 @@
 
   <body>
 
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Katari CRUD</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <form class="navbar-form navbar-right" action="{{ url_for('login') }}" method="POST">
+              <div class="form-group">
+                <input type="text" placeholder="Username" name="username" class="form-control">
+              </div>
+              <div class="form-group">
+                <input type="password" placeholder="Password" name="password" class="form-control">
+              </div>
+              <button type="submit" class="btn btn-success">Log in</button>
+            </form>
+          </div><!--/.navbar-collapse -->
+
+        </div>
+   </nav>
+
+   {% if error%}
+     <div class="alert alert-custom alert-danger container" role='alert'>
+       <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+       <span class='sr-only'>Error:</span>
+       {{ error }}
+     </div>
+   {% endif %}
+<!--/.Container SignIn -->
+
+    <br><br><br>
     <div class="container">
-      <form class="form-signin" action="{{ url_for('login') }}" method="POST">
-            <h2 class="form-signin-heading">Please Log In</h2>
+      <form class="form-signin" method="POST">
+            <h2 class="form-signin-heading">Please Sign Up</h2>
+            <label for="fullname" class="sr-only">Full Name</label>
+            <input type="text" class="form-control" placeholder="Full Name" name='fullname' required autofocus><br>
+
             <label for="username" class="sr-only">Username</label>
-            <input type="text" class="form-control" placeholder="username" name='username' required autofocus><br>
+            <input type="text" class="form-control" placeholder="Username" name='username' required autofocus><br>
+
+            <label for="email" class="sr-only">Email</label>
+            <input type="email" class="form-control" placeholder="Email" name='email' required autofocus><br>
+
             <label for="password" class="sr-only">Password</label>
-            <input type="password" class="form-control" placeholder="password" name='password' required>
-            <button type="submit" class="btn btn-lg btn-primary btn-block">Log In</button><br>
+            <input type="password" class="form-control" placeholder="Password" name='password' required>
+
+            <label for="password-ctrl" class="sr-only">Repeat Password</label>
+            <input type="password" class="form-control" placeholder="Repeat password" name='password-ctrl' required>
+
+            <button type="submit" class="btn btn-lg btn-primary btn-block">Sign Up</button><br>
             <!-- Showing the error -->
             {% if error%}
               <div class="alert alert-danger" role='alert'>
@@ -28,7 +75,20 @@
               </div>
             {% endif %}
       </form>
-    </div>
+
+</div>
+
+<!-- Footer -->
+<footer class="text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; Katari 2016
+                </div>
+            </div>
+        </div>
+</footer>
+
   <!-- Latest compiled and minified JavaScript  and jquery-->
   <script src='../static/js/jquery.js'></script>
   <script src='../static/js/bootstrap.min.js'></script>
