Resctrucre|LoginManager|OK

--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content%}
 
-<h3>Welcome {{ session['username'] }}</h3>
+<h3>Welcome! {{ userlog.fullname }}</h3>
 <p>
   Sweet Home
 </p>
