--- a/crud/templates/base.html
+++ b/crud/templates/base.html
@@ -26,8 +26,21 @@
           <ul class="nav navbar-nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">Modify</a></li>
-              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+              <li><a href="#delete">Delete</a></li>
           </ul>
+              <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                      aria-haspopup="true" aria-expanded="false">{{ userlog.username }} <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    </ul>
+                  </li>
+                </ul>
         </div>
       </div>
     </nav>
@@ -40,6 +53,10 @@
           {% endblock content %}
 
       </div>
+
+        <footer>
+              <p>&copy; 2016 Katari, Inc.</p>
+        </footer>
     </div>
   <!-- Latest compiled and minified JavaScript  and jquery-->
   <script src='../static/js/jquery.js'></script>
