--- a/crud/templates/base.html
+++ b/crud/templates/base.html
@@ -33,7 +33,7 @@
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                       aria-haspopup="true" aria-expanded="false">{{ userlog.username }} <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
+                        <li><a href="{{url_for('user')}}">Profile</a></li>
                         <li><a href="#">Another action</a></li>
                         <li><a href="#">Something else here</a></li>
                         <li role="separator" class="divider"></li>
