--- a/crud/templates/user.html
+++ b/crud/templates/user.html
@@ -59,7 +59,7 @@
           <div class="tab-content">
              <div class="tab-pane active" id="home">
 
-              <form class="form-signin" method="POST">
+              <form class="form-signin" method="POST" action="{{ url_for('user') }}">
 
                <div class="form-group">
                  {{ postForm.csrf_token }}
@@ -96,7 +96,7 @@
                         <td><i class="pull-right fa fa-edit"></i><img src="{{ userlog.avatar(35) }}">
                           <small>{{p.timestamp}} </small> <br><br>{{p.body}}</td>
                      </tr>
-
+                     <br>
                      {% endfor %}
 
                    </tbody>
@@ -162,64 +162,64 @@
 
 
                   <hr>
-                  <form class="form" action="##" method="post" id="registrationForm">
+                  <form class="form" method="post" id="registrationForm" action="{{ url_for('update') }}">
+
+                    {{ updateForm.csrf_token }}
+
+
                       <div class="form-group">
 
+                          <!-- Fullname !-->
                           <div class="col-xs-6">
-                              <label for="first_name"><h4>First name</h4></label>
-                              <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
+                              <label for="full_name"><h4>Full Name</h4></label>
+                              {{ updateForm.fullname(placeholder="Fullname",class="form-control") }}
+                          <!--
+                              <input type="text" class="form-control" name="full_name"
+                              id="full_name" placeholder="Full name" title="enter your Full Name."> !-->
                           </div>
                       </div>
                       <div class="form-group">
 
+                        <!-- Phone !-->
                           <div class="col-xs-6">
-                            <label for="last_name"><h4>Last name</h4></label>
-                              <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
+                            <label for="phone"><h4>Phone</h4></label>
+                            {{ updateForm.phone(placeholder="Phone",class="form-control") }}
+
                           </div>
                       </div>
 
-                      <div class="form-group">
+                      <!-- Location !-->
 
-                          <div class="col-xs-6">
-                              <label for="phone"><h4>Phone</h4></label>
-                              <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone" title="enter your phone number if any.">
-                          </div>
-                      </div>
-
-                      <div class="form-group">
-                          <div class="col-xs-6">
-                             <label for="mobile"><h4>Mobile</h4></label>
-                              <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
-                          </div>
-                      </div>
-                      <div class="form-group">
-
-                          <div class="col-xs-6">
-                              <label for="email"><h4>Email</h4></label>
-                              <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
-                          </div>
-                      </div>
                       <div class="form-group">
 
                           <div class="col-xs-6">
                               <label for="email"><h4>Location</h4></label>
-                              <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
+                              {{ updateForm.location(placeholder="Location",class="form-control") }}
+
                           </div>
                       </div>
+                      <!-- Website !-->
+
                       <div class="form-group">
 
                           <div class="col-xs-6">
-                              <label for="password"><h4>Password</h4></label>
-                              <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
+                              <label for="email"><h4>Website</h4></label>
+                              {{ updateForm.website(placeholder="Website",class="form-control") }}
+
                           </div>
                       </div>
+                      
+                      <!-- About !-->
+
                       <div class="form-group">
 
-                          <div class="col-xs-6">
-                            <label for="password2"><h4>Verify</h4></label>
-                              <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
+                          <div class="col-xs-12">
+                              <label for="email"><h4>About</h4></label>
+                              {{ updateForm.about(placeholder="Say something about you..",class="form-control") }}
+
                           </div>
                       </div>
+
                       <div class="form-group">
                            <div class="col-xs-12">
                                 <br>
