--- a/crud/templates/user.html
+++ b/crud/templates/user.html
@@ -7,6 +7,7 @@
 <div class="container">
   <div class="row">
       <div class="col-sm-10"><h1>{{userlog.fullname}}</h1></div>
+
       <div class="col-sm-2"><a href="/users" class="pull-right"><img title="profile image"
         class="img-circle img-responsive"
         src="{{ userlog.avatar(128) }}"></a></div>
@@ -17,15 +18,16 @@
 
           <ul class="list-group">
             <li class="list-group-item text-muted">Profile</li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Joined</strong></span> 2.13.2014</li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Last seen</strong></span> Yesterday</li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Real name</strong></span> Joseph Doe</li>
+            <li class="list-group-item text-right"><span class="pull-left"><strong>About:</strong></span><br>{{userlog.about_me}}</li>
+
+            <li class="list-group-item text-right"><span class="pull-left"><strong>Last seen</strong></span>{{userlog.last_seen}}</li>
+            <li class="list-group-item text-right"><span class="pull-left"><strong>Real name</strong></span>{{userlog.fullname}}</li>
 
           </ul>
 
           <div class="panel panel-default">
             <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i></div>
-            <div class="panel-body"><a href="http://bootply.com">bootply.com</a></div>
+            <div class="panel-body"><a href="{{userlog.fullname}}">{{userlog.website}}</a></div>
           </div>
 
 
@@ -208,7 +210,7 @@
 
                           </div>
                       </div>
-                      
+
                       <!-- About !-->
 
                       <div class="form-group">
