--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -32,7 +32,12 @@
                 </tr>
                 {% endfor %}
               </tbody>
+
+
     </table>
+
+    {{ userlog.followed_posts() }}
+
   </div>
 
 
