--- a/crud/templates/base.html
+++ b/crud/templates/base.html
@@ -61,6 +61,8 @@
   <!-- Latest compiled and minified JavaScript  and jquery-->
   <script src='../static/js/jquery.js'></script>
   <script src='../static/js/bootstrap.min.js'></script>
+  <script src='../static/js/moment.min.js'></script>
+
 
   </body>
 </html>
