--- a/crud/templates/user.html
+++ b/crud/templates/user.html
@@ -6,7 +6,10 @@
 <hr>
 <div class="container">
   <div class="row">
-      <div class="col-sm-10"><h1>{{userlog.fullname}}</h1></div>
+      <div class="col-sm-10"><h1>{{userlog.fullname}}</h1>
+
+        {{ momentjs(userlog.last_seen).calendar()}}
+      </div>
 
       <div class="col-sm-2"><a href="/users" class="pull-right"><img title="profile image"
         class="img-circle img-responsive"
@@ -20,7 +23,8 @@
             <li class="list-group-item text-muted">Profile</li>
             <li class="list-group-item text-right"><span class="pull-left"><strong>About:</strong></span><br>{{userlog.about_me}}</li>
 
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Last seen</strong></span>{{userlog.last_seen}}</li>
+
+            <li class="list-group-item text-right"><span class="pull-left"><strong>Last seen</strong></span>{{ userlog.last_seen }}</li>
             <li class="list-group-item text-right"><span class="pull-left"><strong>Real name</strong></span>{{userlog.fullname}}</li>
 
           </ul>
