--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Katari CRUD</title>
+    <title>FlaskBook beta</title>
 
     <!-- Latest compiled and minified CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="#" class='navbar-brand'>Katari CRUD</a>
+            <a href="#" class='navbar-brand'>FlaskBook beta</a>
         </div>
         <div class="collapse navbar-collapse" id='navbar'>
           <ul class="nav navbar-nav">
@@ -55,7 +55,7 @@
       </div>
 
         <footer>
-              <p>&copy; 2016 Katari, Inc.</p>
+              <p>&copy; 2016 libert.xyz</p>
         </footer>
     </div>
   <!-- Latest compiled and minified JavaScript  and jquery-->
