--- a/book/templates/login.html
+++ b/book/templates/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Katari CRUD-LogIn</title>
+    <title>FlaskBook beta</title>
 
     <!-- Latest compiled and minified CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Katari 2016
+                    Copyright &copy; libert.xyz 2016
                 </div>
             </div>
         </div>
