--- a/book/templates/login.html
+++ b/book/templates/login.html
@@ -20,7 +20,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Katari CRUD</a>
+            <a class="navbar-brand" href="#">FlaskBook beta</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
 
